RDV
Version #.#
RELEASE DATE


INTRODUCTION


NEW FEATURES

  - Support for PNG and GIF images with the ImageViz visualization extension.
  - DialViz, a visualization extension to view a numeric data channel on a dial.
  - Export of data to the MATLAB MAT-file format.
  - Support for port knocking authentication.
  - Added support for panning and zooming to ImageViz. A clickable thumbnail
  	image was also added and is displayed for navigation purposes when zoomed
  	in.

BUG FIXES

  - [1847872] Children of shortcut servers aren't shown in channel list.


CHANGES

  - All RDV class were moved to the "org.rdv" package.
  - Plots set to auto range, don't always include zero anymore.